# satoru-hakaton

./: .gitignore  README.md
1C/: ConfigDumpInfo.xml  Configuration.xml
1C/Catalogs/: EPA_УстройстваПользователей.xml  ИдентификаторыОбъектовМетаданных.xml  Номенклатура.xml  Пользователи.xml
1C/CommonForms/: EPA_ФормаАвторизации.xml  EPA_ФормаГенерацииКода.xml
1C/CommonModules/: EPA_ВзаимодействиеHTTP.xml  EPA_ОбработчикиСлужебное.xml  EPA_ОбработчикиСобытий.xml
1C/Constants/: EPA_URL.xml
1C/DataProcessors/: EPA_ПанельАдминистрирования.xml
1C/DefinedTypes/: EPA_URL.xml  EPA_Пользователь.xml
1C/Documents/: РеализацияТоваровУслуг.xml
1C/Enums/: EPA_Действия.xml  EPA_СложностьЗаданий.xml
1C/EventSubscriptions/: EPA_СобытияЗаписи.xml  (+1 more)
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  local.env  main.py  pyproject.toml  settings.py
backend/app/: constants.py  database_config.py  loggin_config.py
backend/app/api/: dependencies.py  routes.py
backend/app/api/action/: router.py  schemas.py  service.py
backend/app/api/auth/: base_config.py  manager.py  schemas.py  user_db.py
backend/app/api/device/: router.py  schemas.py
backend/app/api/user/: router.py  schemas.py
backend/app/models/: __init__.py  sqlalchemy_model.py  user.py
backend/app/tests/: conftest.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_09_07_1306-2fb10a3965ed_init.py  2024_09_07_1700-be47e8942289_device_id.py  2024_09_08_1243-7ae3191d9281_new_fields.py
ml/: .gitignore  emotions.py  main.py  pushups.py  requirements.txt  settings.gradle.kts  squats.py
mobile/: MOBILE.md
(+56 files in other folders)
